--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <header>
     <div class="header-left">
       <a href="#home" class="logo-link">
-        <img src="KCfiles/KClogowhite.png" alt="KindCare Logo" class="logo-img" />
+        <img src="KCfiles/KClogo2.png" alt="KindCare Logo" class="logo-img" />
       </a>
     </div>
     <div class="header-right">
@@ -71,6 +71,29 @@
       <p>KindCare was created to meet the growing care demands of Alberta families. Our foundation is built on kindness, professionalism, knowledge, and trustworthiness.</p>
     </section>
 
+    <!-- NEW: Specialized Programs Section -->
+    <section id="special-programs">
+      <h2>Specialized Programs for Children</h2>
+      <p class="subheading">Tailored care programs to support every stage of early development.</p>
+      <div class="program-cards">
+        <div class="program-card">
+          <img src="KCfiles/your-image1.jpg" alt="Maternal" />
+          <h3>Maternal</h3>
+          <p>[Description for the Maternal program]</p>
+        </div>
+        <div class="program-card">
+          <img src="KCfiles/your-image2.jpg" alt="Pre-K" />
+          <h3>Pre-K</h3>
+          <p>[Description for the Pre-K program]</p>
+        </div>
+        <div class="program-card">
+          <img src="KCfiles/your-image3.jpg" alt="Preschool" />
+          <h3>Preschool</h3>
+          <p>[Description for the Preschool program]</p>
+        </div>
+      </div>
+    </section>
+
     <section id="services">
       <h2>Services by KindCare</h2>
       <p class="subheading">Compassionate care for every need, at every stage.</p>
@@ -99,7 +122,6 @@
       <p class="subheading">Meeting Alberta's urgent and rising care needs with scalable heart-led solutions.</p>
       <p>Over 100,000 Albertans live with disabilities. The senior population is set to double by 2040. KindCare fills the gap with reliable, compassionate, and scalable care services.</p>
     </section>
-
 
     <section id="contactus">
       <h2>Contact KindCare</h2>
