--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KindCare</title>
-  <link rel="icon" type="image/png" href="KCfiles/mapleleaf.png" />  
+  <link rel="icon" type="image/png" href="KCfiles/KClogoK.png" />  
   <link rel="stylesheet" href="styles.css" />
   <script defer>
     function toggleMenu() {
