--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KindCare</title>
   <link rel="icon" type="image/png" href="KCfiles/KClogoK.png" />  
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
   <script defer>
     function toggleMenu() {
@@ -64,10 +65,30 @@
     </section>
 
     <section id="aboutus">
-      <h2>About KindCare</h2>
-      <p class="subheading">Trusted professionals delivering seamless care experiences with heart and professionalism.</p>
-      <p>KindCare was founded with the mission to bridge the gap in Alberta’s care system. We offer certified, compassionate, and personalized support for families, seniors, and individuals with disabilities — ensuring peace of mind and a better quality of life.</p>
+      <div class="about-flex">
+        <div class="about-left">
+          <h2>About KindCare</h2>
+          <p class="subheading">KindCare was built with a simple goal: to provide trustworthy, personalized, and professional care for every stage of life.</p>
+        </div>
+        <div class="about-right">
+          <h3>Who We Are</h3>
+          <p>We are a growing network of certified caregivers offering reliable childcare, disability support, and elder care in Alberta. At our core, we believe that compassionate care should be accessible to every family.</p>
+          <br />
+          <h3>What We Value</h3>
+          <p>
+            ✅ Kindness & Compassion<br>
+            ✅ Professionalism<br>
+            ✅ Trust & Transparency<br>
+            ✅ Seamless 24/7 Support<br>
+            ✅ Community-First Approach
+          </p>
+          <br>
+          <em>“There’s no care like Canadian care — and no support like KindCare.”</em>
+        </div>
+      </div>
     </section>
+    
+    
 
     <section id="special-programs">
       <h2>Our Core Care Services</h2>
