--- a/index.html
+++ b/index.html
@@ -114,15 +114,32 @@
 
     <section id="services">
       <h2>Services by KindCare</h2>
-      <p class="subheading">Compassionate care for every need, at every stage.</p>
-      <div class="button-container">
-        <button>Childcare</button>
-        <button>Disability Support</button>
-        <button>Senior Care</button>
-        <button>Behavioural Support</button>
-        <button>Custom Care Plans</button>
+      <p class="subheading">Compassionate, personalized care designed for every age and ability — all delivered with professionalism, trust, and 24/7 support.</p>
+      
+      <div class="services-grid">
+        <div class="service-item">
+          <h3>👶 Childcare</h3>
+          <p>Certified caregivers offering flexible, nurturing care for infants to teens.</p>
+        </div>
+        <div class="service-item">
+          <h3>♿ Disability Support</h3>
+          <p>Individualized assistance for physical and developmental needs — always empathetic and reliable.</p>
+        </div>
+        <div class="service-item">
+          <h3>👵 Senior Care</h3>
+          <p>Helping seniors age at home with dignity — from companionship to daily living support.</p>
+        </div>
+        <div class="service-item">
+          <h3>🧠 Behavioural Support</h3>
+          <p>Expert-led behavioral support with personalized approaches for children and adults.</p>
+        </div>
+        <div class="service-item">
+          <h3>📝 Custom Care Plans</h3>
+          <p>Tailored plans built to suit your family's unique needs — always accessible, always kind.</p>
+        </div>
       </div>
     </section>
+    
 
     <section id="WhyKindCare">
       <h2>Why Choose KindCare</h2>
