added new phone number

--- a/index.html
+++ b/index.html
@@ -176,7 +176,9 @@
         <div class="contact-info">
           <p>📍 <strong>Location:</strong> Calgary, Alberta</p>
           <p>📧 <strong>Email:</strong> <a href="mailto:hello@thekindcare.ca">hello@thekindcare.ca</a></p>
-          <p>📞 <strong>Phone:</strong> Coming soon
+          <p>📞 <strong>Phone:</strong> <a href="tel:4038051046" style="color: #0086c4; text-decoration: underline; cursor: pointer;">403-805-1046</a></p>
+
+
           </p>
         </div>
     
